crates/data_privacy_macros/src/snapshots/data_privacy_macros__derive__test__classified_debug.snap
---
source: crates/data_privacy_macros/src/derive.rs
expression: pretty
---
impl core::fmt::Debug for EmailAddress {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        f.write_fmt(
            format_args!(
                "<CLASSIFIED:{}/{}>", data_privacy::Classified::data_class(self)
                .taxonomy(), data_privacy::Classified::data_class(self).name()
            ),
        )
    }
}
